# service

./: Cargo.toml  rust-toolchain.toml
examples/: create.rs  destroy.rs  service.rs
examples/create/: Cargo.toml
examples/create/src/: main.rs
examples/destroy/: Cargo.toml
examples/destroy/src/: main.rs
examples/service/: Cargo.toml
examples/service-async/: Cargo.toml
examples/service-async/src/: main.rs
examples/service/src/: main.rs
service/: Cargo.toml
service/src/: android.rs  lib.rs  linux.rs  windows.rs
src/: lib.rs  linux.rs  windows.rs
