[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

[dependencies.tokio]
version = "1.36.0"
features = ["full"]
optional = true

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winsvc"]}

[features]
async = [ "dep:tokio" ]