[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
log = "0.4.21"

[dependencies.tokio]
version = "1.36.0"
features = ["full"]
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
syslog = "6.1.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winsvc"]}

[features]
async = [ "dep:tokio" ]