[package]
name = "service"
version = "0.2.1"
edition = "2021"
description = "A library for managing services in a cross platform manner."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
log = "0.4.21"
serde = {version = "1.0.198", features = ["serde_derive"], optional = true }

[dependencies.userprompt]
version = "0.3.0"
optional = true

[dependencies.tokio]
version = "1.36.0"
features = ["full"]
optional = true

[target.'cfg(target_os = "linux")'.dependencies]
simple_logger = "4.3.3"

[target.'cfg(windows)'.dependencies]
eventlog = "0.2.2"
lazy_static = "1.4.0"
widestring = "1.1.0"
winapi = {version = "0.3.9", features = ["errhandlingapi", "winsvc", "winerror", "winuser"]}

[features]
async = [ "dep:tokio" ]
prompt = [ "dep:userprompt" ]
egui-prompt = [ "dep:userprompt", "userprompt/egui" ]
serde = [ "dep:serde" ]